# ClNotes

./: .gitignore  CMakeLists.txt  README.md
include/: cli.hpp  database.hpp
src/: cli.cpp  database.cpp  main.cpp
